--- a/docs/qa/gates/1.1-project-bootstrap.yml
+++ b/docs/qa/gates/1.1-project-bootstrap.yml
@@ -1,24 +1,49 @@
 schema: 1
 story: '1.1'
-gate: CONCERNS
-status_reason: 'Implementation appears complete but application startup not verified and P0 E2E test missing.'
-reviewer: 'Quinn'
-updated: '2026-01-20T20:30:00Z'
-top_issues:
-  - id: 'TEST-001'
-    severity: medium
-    finding: 'P0 E2E test (1.1-E2E-001) not implemented - application responds on startup'
-    suggested_action: 'Add ApplicationStartupTest with WebEnvironment.RANDOM_PORT'
-  - id: 'TEST-002'
-    severity: medium
-    finding: 'P0 integration test for SQLite datasource connection not implemented'
-    suggested_action: 'Add ConfigurationTest validating DataSource injection'
-  - id: 'REQ-001'
-    severity: low
-    finding: 'Application startup not manually verified (Java unavailable in dev environment)'
-    suggested_action: 'Run ./mvnw spring-boot:run and verify localhost:8080 responds'
-  - id: 'REQ-002'
-    severity: low
-    finding: 'Database auto-creation not verified'
-    suggested_action: 'Confirm ./data/honeyai.db created on first run'
+story_title: 'Project Bootstrap & Core Configuration'
+gate: PASS
+status_reason: 'All acceptance criteria met, P0 tests implemented and passing, previous issues resolved.'
+reviewer: 'Quinn (Test Architect)'
+updated: '2026-01-20T21:15:00Z'
+
+top_issues: []
+
 waiver: { active: false }
+
+quality_score: 100
+expires: '2026-02-03T21:15:00Z'
+
+evidence:
+  tests_reviewed: 4
+  risks_identified: 0
+  trace:
+    ac_covered: [1, 2, 3, 4, 5, 6, 7, 8, 9]
+    ac_gaps: []
+
+nfr_validation:
+  security:
+    status: PASS
+    notes: 'No security concerns for bootstrap story'
+  performance:
+    status: PASS
+    notes: 'Standard Spring Boot startup, graceful shutdown configured'
+  reliability:
+    status: PASS
+    notes: 'Application starts reliably, tests confirm'
+  maintainability:
+    status: PASS
+    notes: 'Clean code structure, follows Spring Boot conventions'
+
+recommendations:
+  immediate: []
+  future:
+    - action: 'Add DatabaseCreationTest for explicit ./data directory verification'
+      refs: ['src/test/java/com/honeyai/']
+
+history:
+  - at: '2026-01-20T20:30:00Z'
+    gate: CONCERNS
+    note: 'Initial review - P0 tests missing'
+  - at: '2026-01-20T21:15:00Z'
+    gate: PASS
+    note: 'Re-review after fixes - all issues resolved'
