Adaptation valeur etiquette

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ honeyai:
     siret: "511036780015"
     nom-apiculteur: "ALLEMAND Jean Pierre"
     adresse: "12 chemin des crouzettes Tarreyres 43370 Cussac-sur-Loire"
-    telephone: "04.71.03.12.43"
+    telephone: "Tel: 04.71.03.12.43"
     dluo-duree-jours: 730
     label-width-mm: 60.0
     label-height-mm: 40.0
