--- a/pom.xml
+++ b/pom.xml
@@ -106,4 +106,66 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>exe</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                        <artifactId>launch4j-maven-plugin</artifactId>
+                        <version>2.5.2</version>
+                        <executions>
+                            <execution>
+                                <id>wrap-exe</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>launch4j</goal>
+                                </goals>
+                                <configuration>
+                                    <dontWrapJar>true</dontWrapJar>
+                                    <headerType>gui</headerType>
+                                    <jar>honeyai-1.0.0.jar</jar>
+                                    <outfile>${project.build.directory}/HoneyAI.exe</outfile>
+                                    <errTitle>HoneyAI - Erreur</errTitle>
+                                    <icon>${project.basedir}/launcher/icon.ico</icon>
+                                    <jre>
+                                        <minVersion>21</minVersion>
+                                        <jdkPreference>preferJre</jdkPreference>
+                                        <initialHeapSize>128</initialHeapSize>
+                                        <maxHeapSize>512</maxHeapSize>
+                                        <opts>
+                                            <opt>-Dfile.encoding=UTF-8</opt>
+                                            <opt>-Dspring.profiles.active=prod</opt>
+                                        </opts>
+                                    </jre>
+                                    <splash>
+                                        <file>${project.basedir}/launcher/splash.bmp</file>
+                                        <waitForWindow>true</waitForWindow>
+                                        <timeout>60</timeout>
+                                    </splash>
+                                    <messages>
+                                        <jreNotFoundErr>Java 21 n'a pas ete trouve. Veuillez installer Java depuis https://adoptium.net</jreNotFoundErr>
+                                    </messages>
+                                    <versionInfo>
+                                        <fileVersion>1.0.0.0</fileVersion>
+                                        <txtFileVersion>${project.version}</txtFileVersion>
+                                        <productVersion>1.0.0.0</productVersion>
+                                        <txtProductVersion>${project.version}</txtProductVersion>
+                                        <fileDescription>HoneyAI - Gestion Apicole</fileDescription>
+                                        <productName>HoneyAI</productName>
+                                        <companyName>Exploitation Apicole Familiale</companyName>
+                                        <internalName>honeyai</internalName>
+                                        <originalFilename>HoneyAI.exe</originalFilename>
+                                        <copyright>2026</copyright>
+                                    </versionInfo>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
